test/spec_vectors/simd_bitwise/fail/module_1.wat
(module (func (result v128) (v128.not (i32.const 0))))